Fix margin and gap around/between cards

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -40,7 +40,6 @@ body {
   min-height: 200px;
   flex: 1 1 auto;
   padding: 5px;
-  margin: 10px;
 }
 
 div {
@@ -49,6 +48,8 @@ div {
 .content {
   flex-wrap: wrap;
   flex: 5 1 auto;
+  margin: 20px;
+  gap: 10px;
 }
 
 .content-and-sidebar {
